<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/main_edNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombreapellidos"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/main_cbEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/edad"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_edNombre" />

    <TextView
        android:id="@+id/main_tvCocacola"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:textAlignment="textEnd"
        android:layout_marginTop="10dp"
        android:text="@string/cocacola"
        app:layout_constraintEnd_toStartOf="@id/main_guiaVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_guiaHorizontal" />

    <EditText
        android:id="@+id/main_edCocacola"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:hint="@string/cero"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/main_guiaVertical"
        app:layout_constraintTop_toBottomOf="@id/main_guiaHorizontal" />

    <TextView
        android:id="@+id/main_tvKasLimon"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:textAlignment="textEnd"
        android:text="@string/kaslimon"
        app:layout_constraintEnd_toStartOf="@id/main_guiaVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tvCocacola" />

    <EditText
        android:id="@+id/main_edKasLimon"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:hint="@string/cero"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/main_guiaVertical"
        app:layout_constraintTop_toBottomOf="@+id/main_edCocacola" />

    <TextView
        android:id="@+id/main_tvKasNaranja"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:textAlignment="textEnd"
        android:text="@string/kasnaranja"
        app:layout_constraintEnd_toStartOf="@id/main_guiaVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tvKasLimon" />

    <EditText
        android:id="@+id/main_edKasNaranja"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:hint="@string/cero"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/main_guiaVertical"
        app:layout_constraintTop_toBottomOf="@+id/main_edKasLimon" />

    <TextView
        android:id="@+id/main_tvRedBull"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:textAlignment="textEnd"
        android:text="@string/redbull"
        app:layout_constraintEnd_toStartOf="@id/main_guiaVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tvKasNaranja" />

    <EditText
        android:id="@+id/main_edRedBull"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:hint="@string/cero"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/main_guiaVertical"
        app:layout_constraintTop_toBottomOf="@+id/main_edKasNaranja" />


    <TextView
        android:id="@+id/main_tvCerveza"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:textAlignment="textEnd"
        android:text="@string/cerveza"
        app:layout_constraintEnd_toStartOf="@id/main_guiaVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tvRedBull" />

    <EditText
        android:id="@+id/main_edCerveza"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:hint="@string/cero"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/main_guiaVertical"
        app:layout_constraintTop_toBottomOf="@+id/main_edRedBull" />

    <TextView
        android:id="@+id/main_tvVino"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:textAlignment="textEnd"
        android:text="@string/vino"
        app:layout_constraintEnd_toStartOf="@id/main_guiaVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tvCerveza" />

    <EditText
        android:id="@+id/main_edVino"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:hint="@string/cero"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/main_guiaVertical"
        app:layout_constraintTop_toBottomOf="@+id/main_edCerveza" />

    <Button
        android:id="@+id/main_bComprar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comprar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tvVino" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_guiaVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_guiaHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>


</androidx.constraintlayout.widget.ConstraintLayout>